--- a/Source/Inixe.InixDialogs/Templates/MessageBoxDialogTemplate.xaml
+++ b/Source/Inixe.InixDialogs/Templates/MessageBoxDialogTemplate.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:local="clr-namespace:Inixe.InixDialogs"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="{x:Type local:MessageBoxDialog}">
+    <Style TargetType="{x:Type local:DialogBase}">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
@@ -12,25 +12,6 @@
                 </Setter.Value>
             </Setter>
         </Style.Setters>
-    </Style>
-
-    
+    </Style>    
 </ResourceDictionary>
-    <!--<ControlTemplate 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:local="clr-namespace:Inixe.InixDialogs"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    mc:Ignorable="d"     
-    TargetType="{x:Type local:MessageBoxDialog}">
-    <Grid d:DataContext="{d:DesignInstance Type={x:Type local:MessageBoxDialog}}">
-        <Popup IsOpen="{Binding IsOpen,Mode=OneWay}">
-            <Popup.Child>
-                <Grid>
-                    
-                </Grid>
-            </Popup.Child>
-        </Popup>    
-    </Grid>
-</ControlTemplate>-->
+    
