Changed themes file name, Added Locale Resources, Merge Interfaces for the relayer, Added Helpers, first sample is running!

--- a/Source/Inixe.InixDialogs.Demo/View/MessageBoxDemoView1.xaml
+++ b/Source/Inixe.InixDialogs.Demo/View/MessageBoxDemoView1.xaml
@@ -23,7 +23,7 @@
             </Style>
         </StackPanel.Style>
         <TextBlock Text="Hit the button to show the Message box"/>
-        <Button Content="Show Message Box" Width="150"/>
-        <inixe:MessageBoxDialog Mediator="{Binding MessageBox}" />
+        <Button Content="Show Message Box" Width="150" Command="{Binding ShowMessageBoxCommand}"/>
+        <inixe:MessageBoxDialog Mediator="{Binding MessageBox, Mode=TwoWay}" />
     </StackPanel>
 </UserControl>
